# ytldl

./: .gitignore  pyproject.toml  youtube.ipynb  ytldl.py
metadata/: metadata.py
test_data/: v1.db
tests/: consts.py  test_cache.py  test_downloader.py  test_extractor.py  test_metadata.py  test_oauth.py  test_postprocessors.py
util/: json.py
yt/: cache.py  download.py  postprocessors.py
ytldl/: __main__.py  app.py
ytldl/metadata/: metadata.py
ytldl/tests/: consts.py  test_downloader.py  test_postprocessors.py
ytldl/util/: exxception.py  url.py
ytldl/yt/: cache.py  download.py  extractor.py  oauth.py  postprocessors.py
