[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytldl"
version = "0.0.3"
authors = [
    { name = "Niakr1s", email = "pavel2188@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = ["ytldl"]
dependencies = [
    'mutagen==1.45.1',
    'Pillow==9.2.0',
    'requests==2.28.1',
    'yt-dlp==2023.3.4',
    'ytmusicapi==0.24.0',
]

[project.scripts]
ytldl = "ytldl.app:main"

[project.urls]
"Homepage" = "https://github.com/niakr1s/ytldl"
"Bug Tracker" = "https://github.com/niakr1s/ytldl/issues"

