[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytldl"
version = "0.1.1"
authors = [{ name = "Niakr1s", email = "pavel2188@gmail.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = ["ytldl"]
dependencies = [
    'mutagen==1.46.0',
    'Pillow==9.5.0',
    'requests==2.31.0',
    'yt-dlp==2023.3.4',
    'ytmusicapi==1.0.2',
    'robocrypt==4.2.6',
]

[project.scripts]
ytldl = "ytldl.app:main"

[project.urls]
"Homepage" = "https://github.com/niakr1s/ytldl"
"Bug Tracker" = "https://github.com/niakr1s/ytldl/issues"
